style.css
:root {
  --violet: hsl(257 40% 49%);
  --soft-magenta: hsl(300 69% 71%);
  --white: hsl(0 0 100%);
  --fw-400: 400;
  --fw-600: 600;
  --fs-title: 1.6rem;
  --fs-paragraph: .9rem;
  --ff-fallback: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: var(--fw-400);
  src: 
    url('assets/fonts/openSans/OpenSans-Regular.woff2') format(woff2),
    url('assets/fonts/openSans/OpenSans-Regular.woff') format(woff),
    url('assets/fonts/openSans/OpenSans-Regular.ttf') format(truetype);
}

@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: var(--fw-400);
  src: 
    url('assets/fonts/poppins/poppinsRegular.woff2') format(woff2),
    url('assets/fonts/poppins/poppinsRegular.woff') format(woff),
    url('assets/fonts/poppins/poppinsRegular.ttf') format(truetype);
}

@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: var(--fw-600);
  src: 
    url('assets/fonts/poppins/poppinsSemiBold.woff2') format(woff2),
    url('assets/fonts/poppins/poppinsSemiBold.woff') format(woff),
    url('assets/fonts/poppins/poppinsSemiBold.ttf') format(truetype);
}

@supports (font-variation-settings: normal) {
  @font-face {
    font-family: 'Open Sans';
    font-weight: 300 800;
    font-style: normal;
    src: 
      url('assets/fonts/openSans/openSans-VF.woff2') format(woff2) tech(variations),
      url('assets/fonts/openSans/openSans-VF.woff2') format("woff2-variations");
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  font: inherit;
}

img,
svg {
  display: block;
  max-width: 100%;
}

body {
  background: var(--violet) url("assets/images/bg-mobile.svg") 0% 0% / 100dvw 45dvh no-repeat;
  font-family: 'Open Sans', var(--ff-fallback);
  font-size: clamp(var(--fs-paragraph), 5vw, calc(var(--fs-paragraph)) * 1.18);
  color: var(--white);
  display: grid;
  grid-template-rows: auto 1fr auto;
  padding-block: 4rem;
  min-height: 100dvh;
  align-items: center;
}

.header,
.main,
.footer {
  width: 80%;
  margin: 0 auto;
  max-width: 1500px;
}

.header {
  display: flex;
}

.header__img {
  max-width: 200px;
  width: 40%;
  min-width: 120px;
}

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 4rem;
}

.main__title {
  font-family: 'Popins', var(--ff-fallback);
  font-weight: var(--fw-600);
  font-size: clamp(var(--fs-title), 3vw, calc(var(--fs-title)) * 1.6);
  text-transform: capitalize;
  text-wrap-style: balance;
}

.main__paragraph,
.main__title {
  margin-block-end: 1.3rem;
}

.main__paragraph {
  color: hsl(from var(--white) h s l / .8);
  text-wrap-style: pretty;
  max-width: 500px;
  width: 100%;
  min-width: 200px;
}


.main__link {
  background-color: var(--white);
  color: var(--violet);
  font-family: 'Popins', var(--ff-fallback);
  font-weight: var(--fw-400);
  font-size: clamp(var(--fs-paragraph), 3vw, calc(var(--fs-paragraph) * 1.4));
  text-decoration: none;
  max-width: 210px;
  width: 80%;
  min-width: 100px;
  margin: auto;
  padding: .7rem 0;
  border-radius: 2rem;
  display: block;
  cursor: pointer;
  transition:
    background-color 300ms ease-in-out,
    color 300ms ease-in-out;
  box-shadow: 0px 0px 10px #413737;
}

.main__link:hover {
  background-color: var(--soft-magenta);
  color: var(--white);
}

.footer__img {
  width: 2.5rem;
  display: inline-block;
  border-radius: 50%;
  border: 1px solid var(--white);
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: border .2s ease-in-out;
}

.footer__img svg {
  transition: fill .2s ease-in-out;
}

.footer__img:first-child {
  padding-inline: 13px;
}

.footer {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.footer__img:hover {
  border-color: var(--soft-magenta);
}

.footer__img:hover svg {
  fill: var(--soft-magenta);
}

@media (width > 800px) {
  body {
    background-image: url("assets/images/bg-desktop.svg");
    background-size: 90dvw 100dvh;
  }

  .header,
  .main,
  .footer {
    width: 90%;
  }
  
  .main {
    flex-direction: row;
    text-align: left;
    justify-content: space-between;
  }

  .main__link {
    margin: 0;
    text-align: center;
    max-width: 195px;
  }

  .main__content {
    width: 40%;
  }

  .footer {
    justify-content: end;
  }

  .main__img img  {
    position: relative;
    top: 3rem;
  }
}

